tests/errors/substructural/composition/copy_drop_struct_with_linear_field_reports_both.sim

            struct Bad: Copy + Drop { r: &out i64 }
            